--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test",
+    "test": "cross-env CI=true react-scripts test --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
