--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -29,6 +29,7 @@
   ],
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
-    "eslint-plugin-jest": "^22.6.4"
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jest": "^22.7.1"
   }
 }
